package org.example.split.wise.model;

public enum PaymentType {
    EQUAL, PERCENTAGE, EXACT;
}
